<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/lightgraybackground"
    android:orientation="vertical">
    <android.support.v7.widget.Toolbar xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:title="About us"
        app:theme="@style/ThemeOverlay.AppCompat.ActionBar" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="20dp"
        android:orientation="vertical">


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_round_rect"
            android:orientation="vertical"
            android:padding="10dp"
            android:layout_gravity="center"
            android:layout_marginTop="80dp">


            <EditText
                android:id="@+id/edittextcratepin"
                android:layout_width="350dp"
                android:layout_height="40dp"
                android:layout_marginTop="10dp"
                android:background="@mipmap/semitransparent_white"
                android:hint="@string/enterpin"
                android:inputType="number"
                android:maxLength="6"
                android:maxLines="1"
                android:paddingLeft="5dp"
                android:textColor="@color/colorTextSecondry"
                android:textColorHint="@color/colorTextSecondry"
                android:textSize="16sp" />


            <EditText
                android:id="@+id/edittextconfirmedPin"
                android:layout_width="350dp"
                android:layout_height="40dp"
                android:layout_marginTop="10dp"
                android:background="@mipmap/semitransparent_white"
                android:hint="@string/confirmpin"
                android:inputType="number"
                android:maxLength="6"
                android:maxLines="1"
                android:paddingLeft="5dp"
                android:textColor="@color/colorTextSecondry"
                android:textColorHint="@color/colorTextSecondry"
                android:textSize="16sp" />


        </LinearLayout>


        <Button
            android:id="@+id/createpin"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:background="@color/colorPrimary"
            android:gravity="center"
            android:text="@string/create_Pin"
            android:textColor="@color/white" />
    </LinearLayout>


</LinearLayout>
