<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/abc"
    android:orientation="vertical">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="320dp"
            android:layout_height="1500dp"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:layout_marginTop="30dp"
            android:gravity="center"
            android:background="@color/white"
            android:orientation="vertical">


            <EditText
                android:id="@+id/name"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@drawable/edittext_style"
                android:hint="PatientName"
                android:layout_marginTop="10dp"
                android:layout_marginRight="20dp"
                android:layout_marginLeft="20dp"
                android:singleLine="true"
                android:textColor="@color/colorTextBlack"
                android:textColorHint="@color/colorTextBlack" />

            <EditText
                android:id="@+id/edittextMobileNumber"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="20dp"
                android:layout_marginLeft="20dp"
                android:background="@drawable/edittext_style"
                android:hint="@string/mobile"
                android:inputType="number"
                android:maxLength="10"
                android:singleLine="true"

                android:textColor="@color/colorTextBlack"
                android:textColorHint="@color/colorTextBlack" />

            <EditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/edittext_style"
                android:hint="@string/hint_email"
                android:singleLine="true"
                android:layout_marginRight="20dp"
                android:layout_marginLeft="20dp"
                android:textColor="@color/colorTextBlack"
                android:textColorHint="@color/colorTextBlack" />

            <EditText
                android:id="@+id/blood_unit"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/edittext_style"
                android:hint="BloodUnit"
                android:inputType="number"
                android:maxLength="2"
                android:layout_marginRight="20dp"
                android:layout_marginLeft="20dp"
                android:singleLine="true"
                android:textColor="@color/colorTextBlack"
                android:textColorHint="@color/colorTextBlack" />

            <EditText
                android:id="@+id/location"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/edittext_style"
                android:hint="Location"
                android:layout_marginRight="20dp"
                android:layout_marginLeft="20dp"
                android:singleLine="true"
                android:textColor="@color/colorTextBlack"
                android:textColorHint="@color/colorTextBlack" />

            <Spinner
                android:id="@+id/spinnerBloodGroup"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/edittext_style"
                android:layout_marginRight="20dp"
                android:layout_marginLeft="20dp"
                android:spinnerMode="dialog"></Spinner>

            <Button
                android:id="@+id/submit"
                android:layout_width="280dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:background="@color/progresslightcolor"
                android:text="@string/action_submit"
                android:textColor="@color/white" />

        </LinearLayout>


    </ScrollView>


</LinearLayout>